# LearnCMake

./: .gitignore  vimrc
001HelloCMake/: CMakeLists.txt  HelloCMake.cpp
004HelloLibrary/: CMakeLists.txt  HelloLibrary.cpp  HelloLibrary.h  Main.cpp
005SubDirectory/: CMakeLists.txt
005SubDirectory/src/: CMakeLists.txt  main.cpp
006OutputPath/: CMakeLists.txt
006OutputPath/src/: CMakeLists.txt  Main.cpp  SayHello.cpp  SayHello.h
007CustomizeInstall/: CMakeLists.txt  run_customize_install.sh
007CustomizeInstall/src/: CMakeLists.txt  Main.cpp
008LibraryProperty/: CMakeLists.txt
008LibraryProperty/src/: CMakeLists.txt  linear.cpp  linear.h
009ExternalLibrary/: CMakeLists.txt
009ExternalLibrary/src/: .CMakeLists.txt.swp  CMakeLists.txt  Main.cpp
010HostSystemInfo/: CMakeLists.txt
010HostSystemInfo/src/: CMakeLists.txt  Main.cpp
013ConfigureFile/: CMakeLists.txt  input.h
014Function/: CMakeLists.txt
015Macro/: .CMakeLists.txt.swp  CMakeLists.txt
