project(HelloCMake) 
set(SRC_LIST HelloCMake.cpp)
message("This is a message")
message(STATUS "This is another message")
#message(SEND_ERROR "This is SEND_ERROR message")
#message(FATAL_ERROR "This is FATAL_ERROR message")
message(STATUS "bin dir: ${HelloCMake_BINARY_DIR}")
message(STATUS "bin dir: ${PROJECT_BINARY_DIR}")
message(STATUS "source dir: ${HelloCMake_SOURCE_DIR}")
message(STATUS "source dir: ${PROJECT_SOURCE_DIR}")
add_executable(hello_cmake ${SRC_LIST})
